--- a/package.json
+++ b/package.json
@@ -8,24 +8,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/checkbox": "*",
+    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-navigation/bottom-tabs": "*",
+    "@react-navigation/native": "*",
+    "@react-navigation/stack": "*",
     "expo": "~52.0.38",
+    "expo-constants": "~17.0.7",
+    "expo-notifications": "~0.29.13",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
-    "expo-constants": "~17.0.7",
-    "@expo/vector-icons": "^14.0.2",
-    "expo-notifications": "~0.29.13",
-    "react-native-paper": "4.9.2",
-    "react-native-screens": "~4.4.0",
-    "@react-navigation/stack": "*",
-    "@react-navigation/native": "*",
     "react-native-gesture-handler": "~2.20.2",
-    "@react-navigation/bottom-tabs": "*",
-    "react-native-safe-area-context": "4.12.0",
-    "@react-native-community/checkbox": "*",
     "react-native-modal-datetime-picker": "*",
-    "@react-native-community/datetimepicker": "8.2.0",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "react-native-paper": "4.9.2",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
