--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -93,6 +93,10 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0.0"
+        
+        manifestPlaceholders = [
+            appAuthRedirectScheme: "com.mohit229.snackab4af9ad7d8547759d7f00c55fa352a6"
+        ]
     }
     signingConfigs {
         debug {
@@ -123,6 +127,10 @@ android {
     }
     androidResources {
         ignoreAssetsPattern '!.svn:!.git:!.ds_store:!*.scc:!CVS:!thumbs.db:!picasa.ini:!*~'
+    }
+    
+    buildFeatures {
+        viewBinding true
     }
 }
 
