--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "expo-constants": "~17.0.7",
     "expo-notifications": "~0.29.13",
     "expo-status-bar": "~2.0.1",
+    "expo-updates": "~0.27.3",
     "react": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-modal-datetime-picker": "*",
     "react-native-paper": "4.9.2",
